--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -11,6 +11,12 @@ h3 {
   width: 100%;
 }
 
+.nav-justified {
+  width: 50%;
+  margin: 0em auto 2em auto;
+
+}
+
 .column-container {
   padding: 0.5em 2em;
 
