--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -11,13 +11,8 @@ h3 {
   width: 100%;
 }
 
-.nav-justified {
+.nav {
   margin: 1em auto 2em auto;
-}
-
-.column-container {
-  padding: 0.5em 2em;
-
 }
 
 .panel {
